Add spender detail type breakdown
